deploy/retrieveUnpackaged/objects/SFDC_Plan2User__c.object
<CustomObject>
    <description>Connector object that ties an Account Plan to a User.</description>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <picklist>
            <picklistValues>
                <fullName>Executive Committee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Products Lead</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Engineering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Services Lead</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SFDC_Acct_Plan__c</fullName>
        <label>Account Plan</label>
        <referenceTo>SFDC_Acct_Plan__c</referenceTo>
        <relationshipLabel>Account Plan Team</relationshipLabel>
        <relationshipName>R00N50000001oQ0wEAE</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <label>Account Plan Team Member</label>
        <referenceTo>User</referenceTo>
        <relationshipName>R00N50000001oQ0qEAE</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Plan2User</label>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>Account Planning Team</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Plan2User</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>